# typer-shell

./: pyproject.toml  requirements.txt
typer_shell/: __init__.py  typer_shell.py
