[project]
name = "typer-shell"
version = "0.1.12"
description = "A shell for typer apps with autocompletion and history"
authors = [{ name = "fergus", email = "fergusfettes@gmail.com" }]
requires-python = ">=3.8.1"
readme = "README.md"
dependencies = [
    "typer>=0.12.4",
    "click>=8.1.3",
    "rich>=13.3.5",
    "click-shell>=2.1",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13,<0.14",
    "ruff>=0.11.11",
]

[tool.hatch.build.targets.sdist]
include = ["typer_shell"]

[tool.hatch.build.targets.wheel]
include = ["typer_shell"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
